--- a/sakai-ng/src/assets/styles.scss
+++ b/sakai-ng/src/assets/styles.scss
@@ -9,6 +9,21 @@ p-paginator {
     margin-top: 1rem !important;
 }
 
+.pi-vote {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background-color: currentColor;
+    -webkit-mask-image: url('/assets/images/vote.svg');
+    mask-image: url('/assets/images/vote.svg');
+    -webkit-mask-size: contain;
+    mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
+}
+
 .pi-steam {
     display: inline-block;
     width: 1em;
